- GObservation::events() (non-const variant)
- GCTAResponseTable::axis(std::string)
- GCTAResponseTable::table(std::string)
- GCTAResponseTable::has_axis(std::string)
- GCTAResponseTable::has_table(std::string)

The following methods have been renamed:
- GCTAResponseTable::tables(), was formerly GCTAResponseTable::size()
- GCTAResponseTable::axis_bins(), was formerly GCTAResponseTable::axis()

The return value has been changed for the following methods:
- GFits::filename() returns now GFilename instead of std::string
- GCTAObservation::eventtype() returns now std::string instead of const std::string&


3. Configuration
-----------------
None


4. Application module
---------------------
None


5. Base module
--------------
None


6. FITS I/O Interface
---------------------
The GFitsTableCol::insert() method did not work corretly for an empty column
since it de-allocated memory without having necessarily memory on disk. This
was corrected by allocating now memory after inserting elements into an empty
FITS column.

GFits now uses the GFilename class to store the FITS filename (fixes #1649).


7. Linear algebra module
------------------------
None


8. Model module
---------------
None


9. Numerics module
------------------
None


10. Observation module
----------------------
A non-const GObservation::events() method has been added to allow for
the manipulation of events within an observation without the need to
create a local copy.


11. Optimization module
-----------------------
None


12. Sky module
--------------
None


13. Support module
------------------
Add GFilename::fullname() method that returns the full filename including
any FITS extension.


14. XML module
--------------
None


15. VO module
-------------
None


16. Xspec module
----------------
None


17. Test module
---------------
None


18. Multi-wavelength interface
------------------------------
None


19. Fermi-LAT interface
----------------------
None


20. CTA interface
-----------------