@@ -24,6 +24,14 @@ The following methods have been renamed:
 - GCTAResponseTable::tables(), was formerly GCTAResponseTable::size()
 - GCTAResponseTable::axis_bins(), was formerly GCTAResponseTable::axis()
 
+The following methods now take a GFilename argument instead of std::string:
+- GEbounds(const GFilename&)
+- GEbounds::load()
+- GEbounds::save()
+- GGti(const GFilename&)                            
+- GGti::load()
+- GGti::save()
+
 The return value has been changed for the following methods:
 - GFits::filename() returns now GFilename instead of std::string
 - GCTAObservation::eventtype() returns now std::string instead of const std::string&
